--- a/Part0/index.html
+++ b/Part0/index.html
@@ -13,8 +13,8 @@
         <div class="centered-wrapper">
             <h1 class="title">
                 MC 
-                <a href="../Part1" class="Part1"> Torres</a> 
-                <a href="../Part 2" class="Part 2">Reminiscance</a> 
+                <a href="./Part1" class="Part1"> Torres</a> 
+                <a href="./Part 2" class="Part 2">Reminiscance</a> 
             </h1>
         </div>
 
